Fix search preview, move search above social icons, reduce icon spacing
- Strip HTML and truncate Algolia search preview to 150 chars
- Move search button into main menu above social icons
- Reduce sidebar icon-to-text spacing in lg and xlg mixins

--- a/src/scss/utils/mixins/_sidebar.scss
+++ b/src/scss/utils/mixins/_sidebar.scss
@@ -109,12 +109,12 @@
                     font-size:      2rem;
                     display:        inline-block;
                     text-align:     center;
-                    width:          30px;
+                    width:          20px;
                     height:         30px;
                     line-height:    30px;
                     padding-top:    0;
                     vertical-align: middle;
-                    margin-right:   15px;
+                    margin-right:   5px;
                 }
                 // Description (name) of a link
                 .sidebar-button-desc {
@@ -221,12 +221,12 @@
                     font-size:      2rem;
                     float:          left;
                     text-align:     center;
-                    width:          30px;
+                    width:          20px;
                     height:         35px;
                     line-height:    35px;
                     padding-top:    0;
                     vertical-align: middle;
-                    margin-right:   15px;
+                    margin-right:   5px;
                 }
                 // Description (name) of a link
                 .sidebar-button-desc {
